# Learn_C_CPP

./: .clang-format  .clangd  .gitignore  .tags  README.md  aa.cpp  bb.cpp  cc.cpp  dd.cpp  test.c  test.cpp  test.txt
A_Tour_of_C++/: 2.5-union-variant.cpp
C_Syntax/: .clangd  assign_compare.c  breakpoint1.c  c-literal.c  c-stdin.c  check-float-is-zero.cpp  compare-cast.cpp  cpp-c-string-literal.cpp  default-value-declaration.cpp  diff-free-delete.cpp  double-compare.cpp  double-left-shift.cpp  entrypoint-1.c  float-int-cast.c  for_i.c  for_test-1.c  get_input_without-enter.c  global_variable.cpp  macro-1.cpp  main_1.c  max-1.cpp  mod-1.c  quick-sort.c  rand_func.c  random-1.cpp  system-1.c  typeof-1.c  union-1.cpp  variable-numbers-of-args.c
C_grammar/: double_div_zero.c  for_i.c  main_1.c  mod-1.c  switch_case_test1.c
DesignPattern/: oop_design_priciple.md
Interview-proj/: My_String.cpp  My_auto_ptr.cpp  base_ptr.cpp  const-member-func-overload.cpp  const-memfunc-call-non-const.cpp  func-overload.cpp  multi-threads-atomic.cpp  print-circle.cpp  static-variable-in-class.cpp  unordered_map-map-memory-usage.cpp  vector_int_ptr_clear.cpp
STL/: STL-sample.cpp  complex_test.cc  output_all_Container.cpp  stl-code-1.cpp  stl-not1.cpp
System/: big-endian-little-endian.cpp  test_computer_speed.cpp  thread-atomic_test.cpp
black_tech/: compile-reflection-1.cpp  flexible_array_in_class.cpp  print-type-name.cpp  (+2 more)
fltk_proj/CubeView/: CMakeLists.txt  CubeMain.cxx  CubeView.cxx  CubeView.h  CubeViewUI.cxx  CubeViewUI.fl  CubeViewUI.h  CubeViewUI.txt  Makefile
(+1139 files in other folders)
